<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/DashBoard"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Toolbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvBox1"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:padding="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="11dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/pilihBahasa"
                                android:textColor="@color/colorWhite"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <RadioGroup
                                android:id="@+id/rgLanguage"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="@color/colorWhite"
                                android:orientation="horizontal">

                                <androidx.appcompat.widget.AppCompatRadioButton
                                    android:id="@+id/rbInd"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@string/indTxt"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="14sp" />

                                <androidx.appcompat.widget.AppCompatRadioButton
                                    android:id="@+id/rbEng"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/engTxt"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="14sp" />
                            </RadioGroup>
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/ubah_warna_teks"
                                android:textColor="@color/colorWhite"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/spColor"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="@color/colorWhite"
                                android:gravity="center_horizontal"
                                android:textAlignment="center" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:padding="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="11dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtLabel"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:gravity="center"
                            android:text="@string/tutorial_android_java"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtLanguage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txtLabel"
                            android:background="@color/colorWhite"
                            android:justificationMode="inter_word"
                            android:padding="15dp"
                            android:text="@string/txtIdn"
                            android:textColor="@color/colorBlack"
                            tools:targetApi="o" />


                        <TextView
                            android:id="@+id/txtToast"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/txtLanguage"
                            android:gravity="center"
                            android:justificationMode="inter_word"
                            android:padding="15dp"
                            android:text="@string/klik_disini"
                            android:textColor="@color/colorWhite" />

                        <TextView
                            android:id="@+id/txtTotal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/txtToast"
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            android:justificationMode="inter_word"
                            android:padding="15dp"
                            android:textColor="@color/colorPrimary"
                            tools:targetApi="o" />

                    </RelativeLayout>

                </ScrollView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="11dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/RecyclerView"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</RelativeLayout>